--- a/.gitignore
+++ b/.gitignore
@@ -60,7 +60,8 @@ coverage.xml
 # Django stuff:
 *.log
 local_settings.py
-db.sqlite3
+# db.sqlite3
+static_collected/
 db.sqlite3-journal
 
 # Flask stuff:
