--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,11 @@
 ## Python 3.11.5  #######
 ## Django==5.1.4  #######
 ## django-cms==4.1.4 ####
+## theme #https://startbootstrap.com/theme/grayscale ####
 #########################
 
 
-
+ 
 asgiref==3.8.1
 chardet==5.2.0
 cssselect2==0.7.0
@@ -55,4 +56,3 @@ webencodings==0.5.1
 
 
 
-#https://startbootstrap.com/theme/grayscale
